--- a/deliverables/_independent/openstack-doc-tools.yaml
+++ b/deliverables/_independent/openstack-doc-tools.yaml
@@ -80,3 +80,7 @@ releases:
     projects:
       - repo: openstack/openstack-doc-tools
         hash: aeddde174e50ea5ef28fb2a2b6b61fbc3b95a106
+  - version: 1.6.0
+    projects:
+      - repo: openstack/openstack-doc-tools
+        hash: 980c84aea1f7c737abfc5cabea7f8e7b535bd43e
