--- a/deliverables/_independent/yaml2ical.yaml
+++ b/deliverables/_independent/yaml2ical.yaml
@@ -31,3 +31,13 @@ releases:
       - Add a startdate to a meeting rather than starting when yaml2ical is run
       - Adds the ability to "skip" meetings on certain dates.
       - Add a batching function to jinja2 to tidy up generated HTML
+  - version: 0.6.1
+    projects:
+      - repo: openstack-infra/yaml2ical
+        hash: 691e5167b0308849fdf4696727d936461933549d
+  - version: 0.7.0
+    projects:
+      - repo: openstack-infra/yaml2ical
+        hash: 2bc859072ffd3a6687084f98ab356bcaff27c830
+    highlights: >
+      - Add a "adhoc" frequency for items that should not generate iCal events
