New release 9.6.0 of puppet-nova (newton)
This new release includes some changes as adding support to
nova placement.

Change-Id: Idb4f8f01e4e5865d2b707c71faa9699dae742c2a

--- a/deliverables/newton/puppet-nova.yaml
+++ b/deliverables/newton/puppet-nova.yaml
@@ -48,3 +48,7 @@ releases:
     projects:
       - repo: openstack/puppet-nova
         hash: e984629807c71a04e885785ae76176d1929f946b
+  - version: 9.6.0
+    projects:
+      - repo: openstack/puppet-nova
+        hash: 957a815ddf32b01d64b69430f2d54d41b9084f9a
