--- a/deliverables/pike/python-barbicanclient.yaml
+++ b/deliverables/pike/python-barbicanclient.yaml
@@ -24,3 +24,6 @@ releases:
     projects:
       - repo: openstack/python-barbicanclient
         hash: 714fce222816ad3348d4ba4c3baaa721308158e2
+branches:
+  - location: 4.5.2
+    name: stable/pike
