watch for open patches with release notes
Change-Id: I998caf4d601d536f2afa46b0631da92406883869
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/watched_queries.yml
+++ b/watched_queries.yml
@@ -34,3 +34,5 @@ queries:
     query: "is:open branch:{branch} project:{project} owner:proposal-bot"
   - title: Documentation patches
     query: "is:open branch:{branch} project:{project} path:^doc/source/.*"
+  - title: Patches with release notes
+    query: "is:open branch:{branch} project:{project} path:^releasenotes/.*"
