set the stable branch type for requirements
We branch requirements from HEAD, not tagged releases.

Change-Id: Ia932a56d562307816f8e203cd0314963bdd29e3d
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/pike/requirements.yaml
+++ b/deliverables/pike/requirements.yaml
@@ -4,6 +4,7 @@ team: requirements
 type: other
 include-pypi-link: yes
 release-model: cycle-with-intermediary
+stable-branch-type: tagless
 releases:
   - version: 1.1.0
     projects:
