--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -45,5 +45,9 @@ releases:
       - hash: 556564782742413969c005f13158b044002427a6
         repo: openstack/puppet-tripleo
     version: 5.6.0
+  - projects:
+      - hash: bd97ed555aea17072289bfa22fc3bee6d5e412c4
+        repo: openstack/puppet-tripleo
+    version: 5.6.1
 team: tripleo
 type: other
