--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -87,3 +87,7 @@ releases:
     projects:
       - repo: openstack/pymod2pkg
         hash: f1b4a9c8cb0ff8ef9453eb8fd1cb2ee6cb7e3eeb
+  - version: 0.8.4
+    projects:
+      - repo: openstack/pymod2pkg
+        hash: 916f4233d018ba04a24fa4d6ad4c261544f9a74a
