Add oslo.versionedobjects 1.21.1 for stable/ocata
Change-Id: I3087bc28d4f30a3073e312f78fe50b8feba489c0

--- a/deliverables/ocata/oslo.versionedobjects.yaml
+++ b/deliverables/ocata/oslo.versionedobjects.yaml
@@ -25,3 +25,7 @@ releases:
     projects:
       - repo: openstack/oslo.versionedobjects
         hash: 1d1932400d60b0073a8254507a3ab9e87b84f4b1
+  - version: 1.21.1
+    projects:
+      - repo: openstack/oslo.versionedobjects
+        hash: 4d9b8302556eabb7f7fc519617f00cf04d9192c4
