[Trivialfix]Fix typos in releases
Fix all the typos that found in releases.

Change-Id: I83c142824a43ecf661f3e84177c9d8b206f78e24

--- a/deliverables/ocata/glance-store.yaml
+++ b/deliverables/ocata/glance-store.yaml
@@ -18,7 +18,7 @@ releases:
         swift+config
       - Store the correct URL in the database with multi-tenant
         Swift storage
-      - Fix bug arround volume sizes in Cinder storage
+      - Fix bug around volume sizes in Cinder storage
       - Allow users to specify the Cinder volume type in Cinder
         storage configuration
   - version: 0.20.0
