--- a/deliverables/ocata/os-brick.yaml
+++ b/deliverables/ocata/os-brick.yaml
@@ -35,4 +35,4 @@ releases:
       - repo: openstack/os-brick
         hash: 6a180265560d5e0bab80e47ac25c15906d1165fb
     highlights: |
-      - Fix compatiblity for Nova encryptors.
+      - Fix compatibility for Nova encryptors.
