--- a/deliverables/pike/octavia.yaml
+++ b/deliverables/pike/octavia.yaml
@@ -21,7 +21,7 @@ releases:
     highlights: |-
       * More octavia v2 API in place
       * Adds support for PROXY protocol for backend members
-      * Adds support for health monitors agains alternate IP/Port
+      * Adds support for health monitors against alternate IP/Port
       * API reference for most of the octavia v2 API
   - version: 1.0.0.0b3
     projects:
