--- a/deliverables/pike/monasca-thresh.yaml
+++ b/deliverables/pike/monasca-thresh.yaml
@@ -9,3 +9,6 @@ releases:
     projects:
       - repo: openstack/monasca-thresh
         hash: 5c1fd542bea2328d5468464174dfcba2097f66cd
+branches:
+  - location: 1.4.0
+    name: stable/pike
