--- a/deliverables/pike/monasca-api.yaml
+++ b/deliverables/pike/monasca-api.yaml
@@ -12,3 +12,10 @@ releases:
     projects:
       - repo: openstack/monasca-api
         hash: 0a3c219a5c9d5fe8a05c335c846b5a17cfe1f5bf
+  - projects:
+      - hash: df923c0d706a28944f7f004bbc3d3e2a12e11102
+        repo: openstack/monasca-api
+    version: 2.2.0
+branches:
+  - location: 2.2.0
+    name: stable/pike
