--- a/deliverables/pike/vitrage-dashboard.yaml
+++ b/deliverables/pike/vitrage-dashboard.yaml
@@ -4,6 +4,9 @@ release-model: cycle-with-intermediary
 team: vitrage
 type: horizon-plugin
 release-notes: https://docs.openstack.org/releasenotes/vitrage-dashboard/unreleased.html
+branches:
+  - location: 1.3.0
+    name: stable/pike
 releases:
   - version: 1.2.0
     projects:
