--- a/deliverables/pike/networking-ovn.yaml
+++ b/deliverables/pike/networking-ovn.yaml
@@ -4,7 +4,7 @@ team: neutron
 release-notes: https://docs.openstack.org/releasenotes/networking-ovn/unreleased.html
 type: other
 release-model: cycle-with-milestones
-include-pypi-link: true
+include-pypi-link: yes
 releases:
   - version: 3.0.0.0b1
     projects:
@@ -14,3 +14,10 @@ releases:
     projects:
       - repo: openstack/networking-ovn
         hash: 95ddb3f7740e1744fc7dcbaa3c9f6490765eb81e
+  - projects:
+      - hash: b2c4e1bcccbd37d5a9a7806b5d1d56c754614c7a
+        repo: openstack/networking-ovn
+    version: 3.0.0.0rc1
+branches:
+  - location: 3.0.0.0rc1
+    name: stable/pike
