--- a/deliverables/pike/networking-sfc.yaml
+++ b/deliverables/pike/networking-sfc.yaml
@@ -4,7 +4,7 @@ team: neutron
 release-notes: https://docs.openstack.org/releasenotes/networking-sfc/unreleased.html
 type: other
 release-model: cycle-with-milestones
-include-pypi-link: true
+include-pypi-link: yes
 releases:
   - version: 5.0.0.0b1
     projects:
@@ -18,3 +18,10 @@ releases:
     projects:
       - repo: openstack/networking-sfc
         hash: 506b06ebf36d04f1de88667ac0c62acbe12da49d
+  - projects:
+      - hash: 9fe187798a74c5bc978960ac6e248cc64fd86fe2
+        repo: openstack/networking-sfc
+    version: 5.0.0.0rc1
+branches:
+  - location: 5.0.0.0rc1
+    name: stable/pike
