--- a/deliverables/pike/neutron-dynamic-routing.yaml
+++ b/deliverables/pike/neutron-dynamic-routing.yaml
@@ -17,3 +17,10 @@ releases:
     projects:
       - repo: openstack/neutron-dynamic-routing
         hash: 74ed9a7999206fccff079defa124efc74fe1c63d
+  - projects:
+      - hash: bdd72c6edeefba825747c18d362b6bb21ce4ab0b
+        repo: openstack/neutron-dynamic-routing
+    version: 11.0.0.0rc1
+branches:
+  - location: 11.0.0.0rc1
+    name: stable/pike
