--- a/deliverables/pike/os-win.yaml
+++ b/deliverables/pike/os-win.yaml
@@ -30,6 +30,10 @@ releases:
     projects:
       - repo: openstack/os-win
         hash: 88db49ebf8a8be569892d2e59d8f3dc4cebf6bf0
+  - version: 2.2.0
+    projects:
+      - repo: openstack/os-win
+        hash: 111fa2896cefac91639dd8ffd28dc1d6b72d86a5
 branches:
   - name: stable/pike
     location: 2.1.0
