Pike RC for Senlin
Change-Id: I3ffb34dc1e03c77ab92f199fd81d8a7af1bb11fe

--- a/deliverables/pike/senlin.yaml
+++ b/deliverables/pike/senlin.yaml
@@ -16,3 +16,10 @@ releases:
     projects:
       - repo: openstack/senlin
         hash: d59e40f4609ecb18b24713bd94fa7d2e290b431c
+  - version: 4.0.0.0rc1
+    projects:
+      - repo: openstack/senlin
+        hash: 59c6ea6617f1199d26d6e00ef431c3e5e42a7089
+branches:
+  - location: 4.0.0.0rc1
+    name: stable/pike
