stable/pike branch for python-openstackclient
Change-Id: I9c1525806afbb62500ee878884a7a7f4689a90e5

--- a/deliverables/pike/python-openstackclient.yaml
+++ b/deliverables/pike/python-openstackclient.yaml
@@ -8,6 +8,8 @@ branches:
   - name: feature/osc4
     location:
       openstack/python-openstackclient: 6fdce1316563f79fa6adf6ffa6439018cc5b8e98
+  - name: stable/pike
+    location: 3.12.0
 releases:
   - version: 3.9.0
     projects:
