--- a/deliverables/pike/solum.yaml
+++ b/deliverables/pike/solum.yaml
@@ -3,8 +3,15 @@ launchpad: solum
 release-model: cycle-with-intermediary
 team: solum
 type: service
+branches:
+  - name: stable/pike
+    location: 5.4.0
 releases:
   - version: 5.3.0
     projects:
       - repo: openstack/solum
         hash: 118aad77a340d2fb6a0fe569c1504636a7f67b28
+  - version: 5.4.0
+    projects:
+      - repo: openstack/solum
+        hash: a327ef08a15e97a445ee895da627039d885d2c95
