--- a/deliverables/pike/keystone.yaml
+++ b/deliverables/pike/keystone.yaml
@@ -16,3 +16,10 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: c3b5d2d77b029880521912e43ad963f9b0c5bf99
+  - version: 12.0.0.0rc1
+    projects:
+      - repo: openstack/keystone
+        hash: e45e77170329f8af0f4d479838bfc69fa9f19014
+branches:
+  - location: 12.0.0.0rc1
+    name: stable/pike
