--- a/deliverables/pike/neutron-lbaas.yaml
+++ b/deliverables/pike/neutron-lbaas.yaml
@@ -16,3 +16,10 @@ releases:
     projects:
       - repo: openstack/neutron-lbaas
         hash: a522eeabaf354ff7fb7878c8b5dd12f1d1ace99a
+  - projects:
+      - hash: 6d68e016c3c6116332bbba9ab072bb6dc8dc5f7f
+        repo: openstack/neutron-lbaas
+    version: 11.0.0.0rc1
+branches:
+  - location: 11.0.0.0rc1
+    name: stable/pike
