Create stable/pike for devstack
Change-Id: Ibd23e56e553433fa676ba7a93c4da98b275c5ccf

--- a/deliverables/pike/devstack.yaml
+++ b/deliverables/pike/devstack.yaml
@@ -4,3 +4,7 @@ release-model: untagged
 team: Quality Assurance
 type: other
 stable-branch-type: tagless
+branches:
+  - location:
+      openstack-dev/devstack: 98ab7d9646730f02983380648831aa2682abcc0c
+    name: stable/pike
