Create requirements repo stable/pike branch
This should be merged once all cycle-with-milestones deliverables
have their stable/pike branches. It effectively opens Queens
development.

Change-Id: Iea7e64530138b21c246a7c01dfe22c833f5a2b2e

--- a/deliverables/pike/requirements.yaml
+++ b/deliverables/pike/requirements.yaml
@@ -5,6 +5,10 @@ type: other
 include-pypi-link: yes
 release-model: cycle-with-intermediary
 stable-branch-type: tagless
+branches:
+  - location:
+      openstack/requirements: b93ebaf5c5295ff29d01e374f3720bc8ea3175f6
+    name: stable/pike
 releases:
   - version: 1.1.0
     projects:
