--- a/deliverables/pike/karbor.yaml
+++ b/deliverables/pike/karbor.yaml
@@ -12,3 +12,11 @@ releases:
     projects:
       - repo: openstack/karbor
         hash: 5516e645ca0abf9b0917ab0267fc53b54c4e7687
+  - version: 0.5.0
+    projects:
+      - repo: openstack/karbor
+        hash: 2f6432ffd5fdf3549e06c72f1cc96e11877f2a60
+
+branches:
+  - location: 0.5.0
+    name: stable/pike
