--- a/deliverables/pike/karbor-dashboard.yaml
+++ b/deliverables/pike/karbor-dashboard.yaml
@@ -8,3 +8,10 @@ releases:
     projects:
       - repo: openstack/karbor-dashboard
         hash: e0b55c296d1373a01674c0bfee2cac848ad7b911
+  - version: 0.4.0
+    projects:
+      - repo: openstack/karbor-dashboard
+        hash: f2f7e6f99bad7112a3682dd191374c75e2e9fc3d
+branches:
+  - location: 0.4.0
+    name: stable/pike
