Add release-note links for python-swiftclient
For the corresponding change for swift, see
Ia47b3092e7cdf9716dfb744d17693301f7688799

Change-Id: I142e6dfeb12a3e1ac97ee00e0ddc57da422a70d2

--- a/deliverables/pike/python-swiftclient.yaml
+++ b/deliverables/pike/python-swiftclient.yaml
@@ -2,6 +2,7 @@
 include-pypi-link: true
 launchpad: python-swiftclient
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/python-swiftclient/pike.html
 team: swift
 type: library
 releases:
