--- a/deliverables/queens/python-swiftclient.yaml
+++ b/deliverables/queens/python-swiftclient.yaml
@@ -2,5 +2,6 @@
 include-pypi-link: yes
 launchpad: python-swiftclient
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/python-swiftclient/current.html
 team: swift
 type: library
