--- a/deliverables/newton/python-swiftclient.yaml
+++ b/deliverables/newton/python-swiftclient.yaml
@@ -1,6 +1,7 @@
 ---
 launchpad: python-swiftclient
 team: swift
+release-notes: https://docs.openstack.org/releasenotes/python-swiftclient/newton.html
 type: library
 release-model: cycle-with-intermediary
 include-pypi-link: yes
