--- a/deliverables/newton/sahara.yaml
+++ b/deliverables/newton/sahara.yaml
@@ -79,3 +79,13 @@ releases:
         hash: fc147fe56343847056f8573b2b14329de24795ec
       - repo: openstack/sahara-image-elements
         hash: 114c3903a2de7f66a9f72b7a0680e9d221bf84d3
+  - version: 5.0.2
+    projects:
+      - repo: openstack/sahara
+        hash: 0dc238ea602e3a08910734a26340eaefcd8b3538
+      - repo: openstack/sahara-dashboard
+        hash: fed6bed0409f7c52426391b29ea73f3355bf190d
+      - repo: openstack/sahara-extra
+        hash: fc147fe56343847056f8573b2b14329de24795ec
+      - repo: openstack/sahara-image-elements
+        hash: 04ac8d8da19ec027daa3e1d30201d2f1a1685636
