--- a/deliverables/ocata/sahara.yaml
+++ b/deliverables/ocata/sahara.yaml
@@ -69,3 +69,13 @@ releases:
         hash: 89b5dbc51d57302027bdaa4e472d0d57e89d5eb4
       - repo: openstack/sahara-image-elements
         hash: 0d87211d1a35d826f82fb808e8a7f41ebf5ca895
+  - version: 6.0.2
+    projects:
+      - repo: openstack/sahara
+        hash: 054bb99ca51f937539e34d5b353f6b2dc23abc3b
+      - repo: openstack/sahara-dashboard
+        hash: 8e8b93080da9f1341c4bd950f740f57356fce9bf
+      - repo: openstack/sahara-extra
+        hash: 89b5dbc51d57302027bdaa4e472d0d57e89d5eb4
+      - repo: openstack/sahara-image-elements
+        hash: 479aa19f5948e1e80903662320c42ddb188871cd
